chore: fix width on small devices

--- a/docs/index.css
+++ b/docs/index.css
@@ -42,7 +42,7 @@ pre {
   color: #fff;
   padding: 1em;
   margin: 0 1em 0 1em;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .indexHeader {
@@ -65,13 +65,14 @@ pre {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: min(720px, 90%);
   padding: 1em;
 }
 
 .block {
   display: flex;
   flex-direction: column;
-  max-width: 720px;
+  max-width: min(720px, 90%);
   padding: 0.25em;
 }
 
